# rules_jvm

./: .bazelrc  .gitignore  .tar-exclude-from-file.conf  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  contrib_rules_jvm_deps_index.json  contrib_rules_jvm_deps_install.json  contrib_rules_jvm_tests_install.json  frozen_deps_install.json  frozen_deps_manifest.json  gazelle_setup.bzl  go.mod  go.sum  maven_install.json  pmd-ruleset.xml  renovate.json  repositories.bzl  setup.bzl  unimportant-change.txt
docs/: BUILD.bazel  postfix.md  preamble.md  stardoc-input.bzl
examples/gazelle/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  maven_install.json
examples/tests_and_lints/: .bazelrc  BUILD.bazel  MODULE.bazel  maven_install.json
examples/workspace-based/: .bazelrc  BUILD.bazel  README.md  WORKSPACE  maven_install.json
examples/workspace-based/java/: maven_install.json
gazelle/common/: BUILD.bazel  rules.go  set.go  walk.go
gazelle/common/git/: BUILD.bazel  gitignore.go
gazelle/common/treesitter/: BUILD.bazel  filters.go  parser.go  queries.go
gazelle/common/treesitter/grammars/: grammars.MODULE.bazel
gazelle/kotlin/: BUILD.bazel  configure.go  generate.go  go.mod  resolver.go
gazelle/kotlin/kotlinconfig/: BUILD.bazel
gazelle/kotlin/parser/: BUILD.bazel  parser.go
gazelle/kotlin/tests/gazelle_exclude_directive/: BUILD.in
java/: BUILD.bazel  checkstyle-strict.xml  checkstyle2junit.xslt  defs.bzl  google-checks.xml  pmd-ruleset.xml
java/gazelle/: BUILD.bazel  README.md  README.rst  configure.go  configure_test.go  constants.go  generate.go  generate_integration_test.go  generate_test.go  integration_base_test.go  lang.go  lang_test.go  parser_router.go  resolve.go  resolve_associates.go  resolve_integration_test.go  resolve_split_test.go  resolve_test.go
java/gazelle/cmd/parsejars/: BUILD.bazel  parsejars.go
java/gazelle/javaconfig/: BUILD.bazel  config.go  config_test.go
java/gazelle/javaconfig/codegen/: BUILD.bazel  codegen.go
java/gazelle/private/bazel/: BUILD.bazel  bazel.go  bazel_test.go
java/gazelle/private/java/: BUILD.bazel  import.go  import_test.go  java.go  java_test.go  package.go  quick_scan.go  quick_scan_test.go
java/gazelle/private/java_export_index/: BUILD.bazel  java_export_index.go
java/gazelle/private/javaparser/: BUILD.bazel  javaparser.go  javaparser_test.go
java/gazelle/private/kotlin/: BUILD.bazel  kotlin.go  kotlin_test.go
java/gazelle/private/kotlinscc/: BUILD.bazel  kotlinscc.go  kotlinscc_test.go
java/gazelle/private/logconfig/: BUILD.bazel  config.go
java/gazelle/private/maven/: BUILD.bazel  config.go  config_test.go  coordinate.go  coordinate_test.go  resolver.go  resolver_test.go  test.go  test_test.go
java/gazelle/private/parser/: BUILD.bazel  parser.go
java/gazelle/private/patches/: bazel_gazelle-1324-allow-configuring-timeout-of-generation-tests.patch
java/gazelle/private/proto/: BUILD.bazel  package.go  package_test.go
java/gazelle/private/scc/: BUILD.bazel  scc.go  scc_test.go
java/gazelle/private/servermanager/: BUILD.bazel  embedded.go  insource-server.go  servermanager.go
java/gazelle/private/sorted_multiset/: BUILD.bazel  multiset.go  multiset_test.go
java/gazelle/private/sorted_set/: BUILD.bazel  btreeset.go  btreeset_test.go  comparisons.go
java/gazelle/private/tsparser/: BUILD.bazel  tsparser.go  tsparser_bench_test.go  tsparser_test.go
java/gazelle/private/types/: BUILD.bazel  types.go  types_test.go
java/gazelle/scripts/: README.md  monitor-gazelle.sh  quick-profile.sh
java/gazelle/testdata/: BUILD.bazel  gazelle_build_mode.bzl
java/gazelle/testdata/additional_annotation_processor/: BUILD.in  maven_install.json
java/gazelle/testdata/annotation_processor/: BUILD.in  WORKSPACE  maven_install.json
java/gazelle/testdata/annotation_processor_extra_imports/: BUILD.in  WORKSPACE  maven_install.json
java/gazelle/testdata/annotation_to_wrapper/: arguments.txt
java/gazelle/testdata/ap_extra_imports/: BUILD.in
java/gazelle/testdata/attribute_setting/: WORKSPACE  arguments.txt  expectedStderr.txt  maven_install.json
java/gazelle/testdata/bin_in_test_disable_bin/: BUILD.out
java/gazelle/testdata/class_index/: maven_index.json  maven_install.json
java/gazelle/testdata/class_resolve_over_regexp/: BUILD.out  README.md  WORKSPACE
java/gazelle/testdata/custom_naming_convention/: BUILD.in
java/gazelle/testdata/custom_test_suffixes/: expectedStderr.txt
java/gazelle/testdata/directive_exclude/: BUILD.in
java/gazelle/testdata/extra_annotation_processor/: WORKSPACE
java/gazelle/testdata/grpc/: expectedStderr.txt
java/gazelle/testdata/interface_exports/: .bazelrc
java/gazelle/testdata/java_export_targets/: BUILD.in  MODULE.bazel  README.md  expectedStderr.txt  maven_install.json
java/gazelle/testdata/java_test_per_file/: BUILD.bazel.in  BUILD.out  WORKSPACE  expectedStderr.txt  maven_install.json
java/gazelle/testdata/java_testonly/: maven_install.json
java/gazelle/testdata/junit_versions/: WORKSPACE  expectedStderr.txt  maven_install.json
java/gazelle/testdata/kotlin_bin/: WORKSPACE
java/gazelle/testdata/kotlin_destructuring_simple/: maven_install.json
java/gazelle/testdata/kotlin_inline_transitive/: WORKSPACE
java/gazelle/testdata/kotlin_inline_with_deps/: WORKSPACE
java/gazelle/testdata/kotlin_lib/: WORKSPACE
java/gazelle/testdata/kt_associates/: BUILD.in
java/gazelle/testdata/kt_destructure/: BUILD.out  WORKSPACE
java/gazelle/testdata/kt_fqn_deps/: README.md
java/gazelle/testdata/kt_inline/: WORKSPACE
java/gazelle/testdata/kt_inline_deps/: WORKSPACE
java/private/: BUILD.bazel  artifact.bzl  checkstyle.bzl  checkstyle_config.bzl  create_jvm_test_suite.bzl  java_test_suite.bzl  java_test_suite_shared_constants.bzl  junit5.bzl  library.bzl  make-docs-visible.patch  non-module-deps.bzl  package.bzl  pmd.bzl  pmd_ruleset.bzl  spotbugs.bzl  spotbugs_config.bzl  zip_repository.bzl
tools/: BUILD.bazel  format.sh  freeze-deps.py  tools.go  update-dependencies.sh  update-docs.sh
(+799 files in other folders)
