load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

buildifier(
    name = "buildifier",
    visibility = ["//visibility:private"],
)

# gazelle:java_maven_install_file contrib_rules_jvm_deps_install.json
# gazelle:prefix github.com/bazel-contrib/rules_jvm

# gazelle:repository go_repository name=org_golang_x_tools_go_vcs importpath=golang.org/x/tools/go/vcs

# gazelle:resolve java com.beust.jcommander @contrib_rules_jvm_deps//:com_beust_jcommander
# gazelle:resolve java com.beust.jcommander.converters @contrib_rules_jvm_deps//:com_beust_jcommander
# gazelle:resolve java com.gazelle.java.javaparser.v0 //java/gazelle/private/javaparser/proto/gazelle/java/javaparser/v0:gazelle_java_build_v0_java_library
# gazelle:resolve java com.google.common.annotations @contrib_rules_jvm_deps//:com_google_guava_guava
# gazelle:resolve java com.google.common.base @contrib_rules_jvm_deps//:com_google_guava_guava
# gazelle:resolve java com.google.common.collect @contrib_rules_jvm_deps//:com_google_guava_guava
# gazelle:resolve java com.google.errorprone.annotations.concurrent @contrib_rules_jvm_deps//:com_google_errorprone_error_prone_annotations
# gazelle:resolve java com.google.gson @contrib_rules_jvm_deps//:com_google_code_gson_gson
# gazelle:resolve java io.grpc @contrib_rules_jvm_deps//:io_grpc_grpc_api
# gazelle:resolve java io.grpc.protobuf.services @contrib_rules_jvm_deps//:io_grpc_grpc_services
# gazelle:resolve java io.grpc.stub @contrib_rules_jvm_deps//:io_grpc_grpc_stub
# gazelle:resolve java javax.annotation @contrib_rules_jvm_deps//:com_google_code_findbugs_jsr305
# gazelle:resolve java org.apache.commons.cli @contrib_rules_jvm_deps//:commons_cli_commons_cli
# gazelle:resolve java org.junit.jupiter.api @maven//:org_junit_jupiter_junit_jupiter_api
# gazelle:resolve java org.slf4j @contrib_rules_jvm_deps//:org_slf4j_slf4j_api

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
    visibility = ["//visibility:private"],
)

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        "@bazel_skylib_gazelle_plugin//bzl",
        "//java/gazelle",
    ],
)

# This is used in ./tools/update-dependencies.sh to update the go dependencies
# and BUILD files.
gazelle(
    name = "gazelle_go",
)
