module(
    name = "contrib_rules_jvm",
    version = "0.31.0",
    repo_name = "contrib_rules_jvm",
)

PROTOBUF_VERSION = "33.4"

# The java packages are published to maven under a different versioning scheme.
PROTOBUF_JAVA_VERSION = "4.{}".format(PROTOBUF_VERSION)

bazel_dep(name = "apple_rules_lint", version = "0.4.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "gazelle", version = "0.42.0", repo_name = "bazel_gazelle")
bazel_dep(name = "protobuf", version = PROTOBUF_VERSION, repo_name = "com_google_protobuf")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_go", version = "0.52.0")
bazel_dep(name = "rules_java", version = "8.15.2")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "bazel_lib", version = "3.0.0")

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.8.1", dev_dependency = True)
bazel_dep(name = "rules_python", version = "1.6.0", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.6.0", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.7.2", dev_dependency = True, repo_name = "io_bazel_stardoc")

linter = use_extension("@apple_rules_lint//lint:extensions.bzl", "linter")
linter.register(name = "java-checkstyle")
linter.configure(
    name = "java-checkstyle",
    config = "//java:checkstyle-default-config",
)
linter.register(name = "java-pmd")
linter.configure(
    name = "java-pmd",
    config = "//java:pmd-config",
)
linter.register(name = "java-spotbugs")
linter.configure(
    name = "java-spotbugs",
    config = "//java:spotbugs-default-config",
)
use_repo(
    linter,
    "apple_linters",
)

# There is a `grpc_java` bazel_dep we could use, but that pollutes the main
# `maven` namespace and patches `protobuf` too. Instead, we pull the http
# archive and patch it so we can use it in the one target we care about.
#
# IMPORTANT: `@grpc-java` is declared via `use_repo_rule` and is therefore
# scoped to this module. Downstream consumers of `contrib_rules_jvm` cannot
# reference it and are not affected by the patches below. Because of that,
# the patches in `third_party/grpc-java.patch` are deliberately *not*
# upstream-safe — they rewrite `_protoc` and `grpc_java_plugin` to point at
# our prebuilt binaries and rewire maven artifacts to our internal repo.
# Do not try to generalise these patches or expose `@grpc-java` to other
# modules; keep this fork strictly internal.
GRPC_JAVA_VERSION = "1.79.0"

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "grpc-java",
    integrity = "sha256-ylMhDugjoV2bHr6Go2tWTWg0/QwEniB0aYAxgLf4og4=",
    patch_args = ["-p1"],
    patches = [
        "//third_party:grpc-java.patch",
    ],
    strip_prefix = "grpc-java-{}".format(GRPC_JAVA_VERSION),
    url = "https://github.com/grpc/grpc-java/archive/refs/tags/v{}.tar.gz".format(GRPC_JAVA_VERSION),
)

# Precompiled protoc-gen-grpc-java plugin binaries from Maven Central.
# These replace the cc_binary build of the plugin from C++ source,
# eliminating the need for a C++ toolchain.
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

_PROTOC_GEN_GRPC_JAVA_URL = "https://repo1.maven.org/maven2/io/grpc/protoc-gen-grpc-java/{v}/protoc-gen-grpc-java-{v}-{{platform}}.exe".format(v = GRPC_JAVA_VERSION)

http_file(
    name = "protoc_gen_grpc_java_linux_x86_64",
    executable = True,
    sha256 = "3d16b70b18854988b29c41e20d06ca3358c47008edb9e6986b926c5bca790816",
    url = _PROTOC_GEN_GRPC_JAVA_URL.format(platform = "linux-x86_64"),
)

http_file(
    name = "protoc_gen_grpc_java_linux_aarch_64",
    executable = True,
    sha256 = "445b924ba4d3f55abd651f71017d592552be706b3918af0d7837b70468137473",
    url = _PROTOC_GEN_GRPC_JAVA_URL.format(platform = "linux-aarch_64"),
)

http_file(
    name = "protoc_gen_grpc_java_osx_x86_64",
    executable = True,
    sha256 = "7b0dcbe2cbc02ebaf03e571eb295f43c0ba3d919b5d9e8fe34015846c9887289",
    url = _PROTOC_GEN_GRPC_JAVA_URL.format(platform = "osx-x86_64"),
)

http_file(
    name = "protoc_gen_grpc_java_osx_aarch_64",
    executable = True,
    sha256 = "7b0dcbe2cbc02ebaf03e571eb295f43c0ba3d919b5d9e8fe34015846c9887289",
    url = _PROTOC_GEN_GRPC_JAVA_URL.format(platform = "osx-aarch_64"),
)

http_file(
    name = "protoc_gen_grpc_java_windows_x86_64",
    executable = True,
    sha256 = "37a04cc3a35680bf17ba08e89d694d292f028e6f7ba24ef4b5bd8a1c43fa2e52",
    url = _PROTOC_GEN_GRPC_JAVA_URL.format(platform = "windows-x86_64"),
)

# Precompiled protoc binaries from the protobuf release.
# The java_grpc_library rule hard-codes a reference to protoc, so we provide
# prebuilt binaries to avoid compiling protoc from C++ source.
_PROTOC_URL = "https://github.com/protocolbuffers/protobuf/releases/download/v{v}/protoc-{v}-{{platform}}.zip".format(v = PROTOBUF_VERSION)

_PREBUILT_PROTOC_BUILD_FILE = """\
load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
package(default_visibility = ["//visibility:public"])
native_binary(name = "protoc", src = "bin/protoc", out = "protoc_bin")
"""

_PREBUILT_PROTOC_WIN_BUILD_FILE = """\
load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
package(default_visibility = ["//visibility:public"])
native_binary(name = "protoc", src = "bin/protoc.exe", out = "protoc_bin.exe")
"""

http_archive(
    name = "prebuilt_protoc_linux_x86_64",
    build_file_content = _PREBUILT_PROTOC_BUILD_FILE,
    sha256 = "c0040ea9aef08fdeb2c74ca609b18d5fdbfc44ea0042fcfbfb38860d35f7dd66",
    url = _PROTOC_URL.format(platform = "linux-x86_64"),
)

http_archive(
    name = "prebuilt_protoc_linux_aarch_64",
    build_file_content = _PREBUILT_PROTOC_BUILD_FILE,
    sha256 = "15aa988f4a6090636525ec236a8e4b3aab41eef402751bd5bb2df6afd9b7b5a5",
    url = _PROTOC_URL.format(platform = "linux-aarch_64"),
)

http_archive(
    name = "prebuilt_protoc_osx_x86_64",
    build_file_content = _PREBUILT_PROTOC_BUILD_FILE,
    sha256 = "a49bec10d039e902d3b43e49938c42526f90011467609864fa6386ac4014da58",
    url = _PROTOC_URL.format(platform = "osx-x86_64"),
)

http_archive(
    name = "prebuilt_protoc_osx_aarch_64",
    build_file_content = _PREBUILT_PROTOC_BUILD_FILE,
    sha256 = "726297dcfed58592fd35620a5a6246ae020c39e88f3fd4cb1827df7bcf3dfcf1",
    url = _PROTOC_URL.format(platform = "osx-aarch_64"),
)

http_archive(
    name = "prebuilt_protoc_win64",
    build_file_content = _PREBUILT_PROTOC_WIN_BUILD_FILE,
    sha256 = "0b31be019b9fe45a388e93bf1f16d70afdf9ce5caf958ea47892fbc868b5a1b3",
    url = _PROTOC_URL.format(platform = "win64"),
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

IO_GRPC_GRPC_JAVA_ARTIFACTS = [
    "com.google.api.grpc:proto-google-common-protos:2.9.0",
    "com.google.guava:failureaccess:1.0.1",
    "org.apache.tomcat:annotations-api:6.0.53",
    "org.codehaus.mojo:animal-sniffer-annotations:1.21",
]

slf4j_version = "1.7.32"

spotbugs_version = "4.8.6"

maven.install(
    name = "contrib_rules_jvm_deps",
    artifacts = [
        "com.github.spotbugs:spotbugs-annotations:%s" % spotbugs_version,
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.errorprone:error_prone_annotations:2.35.1",
        "com.google.googlejavaformat:google-java-format:1.24.0",
        "com.google.guava:guava:33.3.1-jre",
        "commons-cli:commons-cli:1.9.0",
        "io.grpc:grpc-api",
        "io.grpc:grpc-core",
        "io.grpc:grpc-netty",
        "io.grpc:grpc-services",
        "io.grpc:grpc-stub",

        # These can be versioned independently of the versions in `repositories.bzl`
        # so long as the version numbers are higher.
        "org.junit.jupiter:junit-jupiter-engine",
        "org.junit.jupiter:junit-jupiter-api",
        "org.junit.platform:junit-platform-commons",
        "org.junit.platform:junit-platform-engine",
        "org.junit.platform:junit-platform-launcher",
        "org.junit.platform:junit-platform-reporting",
        "org.junit.vintage:junit-vintage-engine",
        "junit:junit:4.13.2",

        # Open Test Alliance for the JVM dep
        "org.opentest4j:opentest4j:1.3.0",

        # Checkstyle deps
        "com.puppycrawl.tools:checkstyle:10.20.2",

        # PMD deps
        "net.sourceforge.pmd:pmd-dist:7.8.0",

        # Spotbugs deps
        "org.slf4j:slf4j-api:%s" % slf4j_version,
        "org.slf4j:slf4j-jdk14:%s" % slf4j_version,

        # Used by us at runtime
        "org.slf4j:slf4j-simple:%s" % slf4j_version,

        # For Kotlin parsing in the Gazelle plugin
        "org.jetbrains.kotlin:kotlin-compiler:2.2.20",

        # For the javaagent used by the JUnit5 runner
        "org.ow2.asm:asm:9.7",

        # We explicitly declare a protobuf runtime version
        # so that it coincides with the one we use to generate the code.
        "com.google.protobuf:protobuf-java:{}".format(PROTOBUF_JAVA_VERSION),
    ] + IO_GRPC_GRPC_JAVA_ARTIFACTS,
    boms = [
        "io.grpc:grpc-bom:1.68.2",
        "org.junit:junit-bom:5.11.3",
    ],
    fail_if_repin_required = True,
    index_file = "//third_party/maven:contrib_rules_jvm_deps_index.json",
    lock_file = "//third_party/maven:contrib_rules_jvm_deps_install.json",
    resolver = "gradle",
    strict_visibility = True,
)

# Spotbugs deps
# We don't want to force people to use 1.8-beta
# but we can't use the `maven` macros because
# we've not loaded rules yet. Fortunately, the
# expansion is easy :)
maven.artifact(
    name = "contrib_rules_jvm_deps",
    artifact = "spotbugs",
    exclusions = ["org.slf4j:slf4j-api"],
    group = "com.github.spotbugs",
    version = spotbugs_version,
)
use_repo(maven, "contrib_rules_jvm_deps")

dev_maven = use_extension(
    "@rules_jvm_external//:extensions.bzl",
    "maven",
    dev_dependency = True,
)
dev_maven.install(
    name = "contrib_rules_jvm_tests",
    artifacts = [
        # These can be versioned independently of the versions in `repositories.bzl`
        # so long as the version numbers are higher.
        "org.junit.jupiter:junit-jupiter-engine:5.8.2",
        "org.junit.jupiter:junit-jupiter-api:5.8.2",
        "org.junit.jupiter:junit-jupiter-params:5.8.2",
        "org.junit.platform:junit-platform-launcher:1.8.2",
        "org.junit.platform:junit-platform-reporting:1.8.2",
        "org.junit.platform:junit-platform-suite:1.8.2",
        "org.junit.platform:junit-platform-suite-api:1.8.2",
        "org.junit.platform:junit-platform-suite-engine:1.8.2",
        "org.junit.platform:junit-platform-testkit:1.8.2",
        "org.junit.vintage:junit-vintage-engine:5.8.2",
        "org.mockito:mockito-core:4.8.1",
    ],
    fail_if_repin_required = True,
    fetch_sources = True,
    lock_file = "//:contrib_rules_jvm_tests_install.json",
)
use_repo(
    dev_maven,
    "contrib_rules_jvm_tests",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.6")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_aristanetworks_goarista",
    "com_github_bazelbuild_buildtools",
    "com_github_google_btree",
    "com_github_google_go_cmp",
    "com_github_google_uuid",
    "com_github_hashicorp_golang_lru",
    "com_github_rs_zerolog",
    "com_github_sergi_go_diff",
    "com_github_stretchr_testify",
    "net_starlark_go",
    "org_golang_google_grpc",
    "org_golang_x_tools",
    "org_golang_x_tools_go_vcs",
)
