load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")

stardoc(
    name = "java-docs",
    out = "java-docs.md",
    input = "stardoc-input.bzl",
    tags = [
        # Stardoc doesn't work with bzlmod
        "manual",
    ],
    deps = [
        "//java:defs",
    ],
)

genrule(
    name = "readme",
    srcs = [
        "postfix.md",
        "preamble.md",
        ":java-docs",
    ],
    outs = ["README.md"],
    cmd = """cat $(location preamble.md) $(location :java-docs) $(location postfix.md) >$@""",
    tags = [
        # Stardoc doesn't work with bzlmod
        "manual",
    ],
    visibility = ["//tools:__pkg__"],
)

bzl_library(
    name = "stardoc-input",
    srcs = ["stardoc-input.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//java:defs"],
)
