load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")

stardoc(
    name = "java-docs",
    out = "java-docs.md",
    input = "//java:defs.bzl",
    symbol_names = [
        "checkstyle_binary",
        "checkstyle_config",
        "checkstyle_test",
        "java_binary",
        "java_export",
        "java_library",
        "java_junit5_test",
        "java_test",
        "java_test_suite",
        "pmd_binary",
        "pmd_ruleset",
        "pmd_test",
        "spotbugs_binary",
        "spotbugs_config",
        "spotbugs_test",
    ],
    tags = [
        # Stardoc doesn't work with bzlmod
        "manual",
    ],
    deps = [
        "//java:defs",
    ],
)

genrule(
    name = "readme",
    srcs = [
        "postfix.md",
        "preamble.md",
        ":java-docs",
    ],
    outs = ["README.md"],
    cmd = """cat $(location preamble.md) $(location :java-docs) $(location postfix.md) >$@""",
    tags = [
        # Stardoc doesn't work with bzlmod
        "manual",
    ],
    visibility = ["//tools:__pkg__"],
)
