load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//java/private:artifact.bzl", "artifact")
load("//java/private:checkstyle_config.bzl", "checkstyle_config")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "doc-files",
    srcs = [
        "defs.bzl",
    ],
    deps = [
        "//java/private:doc-files",
    ],
    visibility = ["//:__pkg__"],
)

alias(
    name = "junit5-runner",
    actual = "//java/src/com/github/bazel_contrib/rules_jvm_contrib/junit5",
)

exports_files([
    "checkstyle-strict.xml",
    "google-checks.xml",
])

checkstyle_config(
    name = "checkstyle-default-config",
    config_file = "google-checks.xml",
)

checkstyle_config(
    name = "checkstyle-strict-config",
    config_file = "checkstyle-strict.xml",
)

java_binary(
    name = "checkstyle_cli",
    testonly = True,
    main_class = "com.puppycrawl.tools.checkstyle.Main",
    runtime_deps = [
        artifact("com.puppycrawl.tools:checkstyle"),
    ],
)
