load("@rules_java//java:defs.bzl", "java_binary")
load("//java/private:artifact.bzl", "artifact")

# gazelle:exclude tools.go

java_binary(
    name = "google-java-format",
    jvm_flags = [
        "--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
    ],
    main_class = "com.google.googlejavaformat.java.Main",
    runtime_deps = [artifact("com.google.googlejavaformat:google-java-format")],
)

py_binary(
    name = "freeze-deps",
    srcs = [
        "freeze-deps.py",
    ],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "update-docs",
    srcs = [
        "copy-output.sh",
    ],
    args = [
        ".",
        "$(location //docs:readme)",
        "README.md",
    ],
    data = [
        "//docs:readme",
    ],
)
