module(
    name = "gazelle_example",
    version = "0.0.0",
)

bazel_dep(name = "contrib_rules_jvm", version = "0.0.0")
local_path_override(
    module_name = "contrib_rules_jvm",
    path = "../..",
)

bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "rules_jvm_external", version = "6.10")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "org.junit.jupiter:junit-jupiter-api:5.8.2",
        "org.junit.jupiter:junit-jupiter-engine:5.8.2",
        "org.junit.platform:junit-platform-launcher:1.8.2",
        "org.junit.platform:junit-platform-reporting:1.8.2",
    ],
    fetch_sources = True,
    known_contributing_modules = ["bazel_worker_java"],
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven")
