module(
    name = "test_and_lints_example",
    version = "0.0.0",
)

bazel_dep(
    name = "apple_rules_lint",
    version = "0.4.0",
)
bazel_dep(
    name = "contrib_rules_jvm",
    version = "0.0.0",
)
local_path_override(
    module_name = "contrib_rules_jvm",
    path = "../..",
)

bazel_dep(
    name = "rules_jvm_external",
    version = "6.6",
)

linter = use_extension("@apple_rules_lint//lint:extensions.bzl", "linter")
linter.configure(
    name = "java-spotbugs",
    config = ":spotbugs-custom-config",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "org.junit.jupiter:junit-jupiter-api:5.8.2",
        "org.junit.jupiter:junit-jupiter-engine:5.8.2",
        "org.junit.platform:junit-platform-launcher:1.8.2",
        "org.junit.platform:junit-platform-reporting:1.8.2",
        "com.github.spotbugs:spotbugs:4.7.3",
        "com.h3xstream.findsecbugs:findsecbugs-plugin:1.12.0",
        "com.mebigfatguy.sb-contrib:sb-contrib:7.6.4",
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
)
use_repo(
    maven,
    "maven",
)
